// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Button 1`] = `
<button
  class="sc-bwzfXH kHZqpR"
  type="button"
>
  foo
</button>
`;

exports[`renders DecoyButton 1`] = `
<div
  class="sc-bdVaJa dnJkEm"
>
  DecoyButton
</div>
`;

exports[`renders big Button 1`] = `
<button
  class="sc-bwzfXH eYHDXc"
  type="button"
>
  I’m a big button!
</button>
`;

exports[`renders danger Button 1`] = `
<button
  class="sc-bwzfXH kDljbx"
  type="button"
>
  Danger!
</button>
`;

exports[`renders primary Button 1`] = `
<button
  class="sc-bwzfXH URjIp"
  type="button"
>
  Primary
</button>
`;

exports[`renders small Button 1`] = `
<button
  class="sc-bwzfXH jhNkEE"
  type="button"
>
  I’m a small button!
</button>
`;
